--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,50 @@
 /*  your css code here. If applicable */
+:root{
+	background-color : #f5f5f5;
+}
+
+.header{
+	background-color : #011e29;
+	text-align: center;
+	color:white;
+	padding:10px;
+}
+.latest-news-section{
+	background-color:white;
+	color:black;
+	width:200px;
+	padding:1px;
+	border-radius:12px;
+}
+.pictorial-news-section{
+	width:300px;
+	background-color:white;
+	text-align:center;
+	color:black;
+	padding:2px;
+	border-radius:10px;
+	
+}
+.latest-news-section{
+	background-color:white;
+	text-align:center;
+	color:black;
+	width:200px;
+	border-radius:10px;
+	padding:10px;
+}
+.news-paper{
+	display:flex;
+	justify-content: space-between;
+	position:relative;
+	top:10px;
+}
+
+
+
+
+
+
+
+
+
